--- a/app.json
+++ b/app.json
@@ -2,19 +2,19 @@
    {
        "Name":"test00",
        "Description":"test00",
-       "IconUrl":"https://github.com/superbderrick/FileHandlings/blob/master/i1.PNG"
+       "IconUrl":"https://github.com/superbderrick/FileHandlings/blob/master/i1.PNG?raw=true"
    },
 
    {
        "Name":"test01",
        "Description":"test01",
-       "IconUrl":"https://github.com/superbderrick/FileHandlings/blob/master/i1.PNG"
+       "IconUrl":"https://github.com/superbderrick/FileHandlings/blob/master/i1.PNG?raw=true"
    },
 
    {
        "Name":"test02",
        "Description":"test02",
-       "IconUrl":"https://github.com/superbderrick/FileHandlings/blob/master/i1.PNG"
+       "IconUrl":"https://github.com/superbderrick/FileHandlings/blob/master/i1.PNG?raw=true"
    }
 
 ]
